Put an HTML of the modules "portal-" in index.html as a static HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <script type="text/javascript" src="javascripts/portal.min.js"></script>
     <title>Editable</title>
   </head>
-  <body></body>
+  <body>
+    <div id="portal" class="portal">
+      <div id="portal-bookmarklet-link" class="portal-bookmarklet-link">
+        <a>Make editable</a>
+      </div>
+      <div id="portal-demo" class="portal-demo">
+        <p>Demo</p>
+      </div>
+    </div>
+  </body>
 </html>
