--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex,nofollow,noarchive">
     <link rel="stylesheet" type="text/css" href="stylesheets/bundle.min.css">
     <link href="favicon.ico" rel="icon" sizes="16x16 32x32 48x48" type="image/vnd.microsoft.icon">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/portal.min.js"></script>
     <title>Editable</title>
   </head>
