--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex,nofollow,noarchive">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/bundle.min.css">
     <link href="favicon.ico" rel="icon" sizes="16x16 32x32 48x48" type="image/vnd.microsoft.icon">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -11,12 +12,16 @@
   </head>
   <body>
     <div id="portal" class="portal">
+      <header>
+      </header>
       <div id="portal-bookmarklet-link" class="portal-bookmarklet-link">
         <a>Make editable</a>
       </div>
       <div id="portal-demo" class="portal-demo">
         <p>Demo</p>
       </div>
+      <footer>
+      </footer>
     </div>
   </body>
 </html>
