--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
     <div id="portal" class="portal">
       <header>
+        <h1>
+          <img src="/images/logo.png" alt="editable.js">
+        </h1>
       </header>
       <div id="portal-bookmarklet-link" class="portal-bookmarklet-link">
         <a>Make editable</a>
