Put the fixed bookmarklet link block

--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
           <img src="/images/logo.png" alt="editable.js">
         </h1>
       </header>
-      <div id="portal-bookmarklet-link" class="portal-bookmarklet-link">
-        <a>Make editable</a>
-      </div>
+      <a id="portal-bookmarklet-link" class="portal-bookmarklet-link">
+        <div class="outer-wrapper">
+          <div class="inner-wrapper">
+            <h1>このページを編集・ダウンロードしてみる</h1>
+            <p>このブロックをクリックしてください</p>
+            <p>このブロックより下が編集可能となります</p>
+            <h1>あなたのページを編集・ダウンロードしてみる</h1>
+            <p>予めこのブロックをWEBブラウザのブックマークバーへドラッグ＆ドロップしておき</p>
+            <p>あなたのページが表示された状態でそのブックマークをクリックしてください</p>
+          </div>
+        </div>
+      </a>
       <div id="portal-demo" class="portal-demo">
         <p>Demo</p>
       </div>
