--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
           <img src="/images/logo.png" alt="editable.js">
         </h1>
       </header>
-      <a id="portal-bookmarklet-link" class="portal-bookmarklet-link">
-        <div class="outer-wrapper">
-          <div class="inner-wrapper">
-            <h1>このページを編集・ダウンロードしてみる</h1>
-            <p>このブロックをクリックしてください</p>
-            <p>このブロックより下が編集可能となります</p>
-            <h1>あなたのページを編集・ダウンロードしてみる</h1>
-            <p>予めこのブロックをWEBブラウザのブックマークバーへドラッグ＆ドロップしておき</p>
-            <p>あなたのページが表示された状態でそのブックマークをクリックしてください</p>
+      <section>
+        <a id="portal-bookmarklet-link" class="portal-bookmarklet-link">
+          <div class="outer-wrapper">
+            <div class="inner-wrapper">
+              <section>
+                <h1>このページを編集・ダウンロードしてみる</h1>
+                <p>このブロックをクリックしてください</p>
+                <p>このブロックより下が編集可能となります</p>
+              </section>
+              <section>
+                <h1>あなたのページを編集・ダウンロードしてみる</h1>
+                <p>予めこのブロックをWEBブラウザのブックマークバーへドラッグ＆ドロップしておき</p>
+                <p>あなたのページが表示された状態でそのブックマークをクリックしてください</p>
+              </section>
+            </div>
           </div>
+        </a>
+      </section>
+      <section>
+        <div id="portal-demo" class="portal-demo">
+          <p>Demo</p>
         </div>
-      </a>
-      <div id="portal-demo" class="portal-demo">
-        <p>Demo</p>
-      </div>
+      </section>
       <footer>
       </footer>
     </div>
