Put the fixed footer

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         </div>
       </section>
       <footer>
+        <p><small>© 2015 DSKTSCHY</small></p>
       </footer>
     </div>
   </body>
