--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       </section>
       <section>
         <div id="portal-demo" class="portal-demo">
-          <section>
-            <h1><span>あなたのページを編集可能にします</span></h1>
-            <p>
+          <section class="editable-group">
+            <h1><span class="editable-target">あなたのページを編集可能にします</span></h1>
+            <p class="editable-target">
               editable.jsは、公開された外観のままHTMLを編集し、ダウンロードすることを目的としたツールです。<br>
               WEBブラウザから利用可能なFTPなどを併用することで、エンジニアでない方にも静的サイトの運用が可能となります。<br>
               HTML構造を可能な限り元のファイルのまま保つよう設計されており、予め指定しておいた要素のみを編集可能にするため、レイアウトの崩れる心配がありません。
             </p>
           </section>
-          <section>
-            <h1><span>HTMLに簡単な設定をしておくだけですぐに使い始められます</span></h1>
-            <p>
+          <section class="editable-group">
+            <h1><span class="editable-target">HTMLに簡単な設定をしておくだけですぐに使い始められます</span></h1>
+            <p class="editable-target">
               このページ上部の「あなたのページを編集・ダウンロードしてみる」と表示されたブロックを、WEBブラウザのブックマークバーへドラッグ＆ドロップしてください。（この工程は初回編集時のみ必要です）<br>
               <br>
               編集対象とするページのHTMLファイルをテキストエディタで開き、編集可能にしたい要素へ class=”editable-target” を追加してください。
@@ -69,7 +69,7 @@
                 </code>
               </p>
             </div>
-            <p>
+            <p class="editable-target">
               複製・消去可能にしたい要素へは class=”editable-group” を追加してください。
             </p>
             <div class="sample">
@@ -97,7 +97,7 @@
                 </code>
               </p>
             </div>
-            <p>
+            <p class="editable-target">
               設定を保存したHTMLファイルをサーバーへアップロードしてください。<br>
               編集対象のページをWEBブラウザで開き、登録したブックマークをクリックすると、設定箇所の編集が可能となります。<br>
               <br>
@@ -107,9 +107,9 @@
               さらに詳しい使い方、設定についてはこちらをご覧ください。
             </p>
           </section>
-          <section>
-            <h1><span>あくまで静的HTMLを対象としたツールです</span></h1>
-            <p>
+          <section class="editable-group">
+            <h1><span class="editable-target">あくまで静的HTMLを対象としたツールです</span></h1>
+            <p class="editable-target">
               editable.jsは、あくまで静的HTMLを対象としたツールです。<br>
               シングル・ページ・アプリケーションのような、動的に挿入される要素が存在するHTMLには、完全対応しているとは言えません。<br>
               editable-config.json の設定により、挿入された要素をダウンロード時に削除することも可能ですが、余分な空白が残る場合があります。<br>
@@ -117,9 +117,9 @@
               その他の注意事項についてはこちらをご覧ください。
             </p>
           </section>
-          <section>
-            <h1><span>対応WEBブラウザ</span></h1>
-            <p class="align-c">
+          <section class="editable-group">
+            <h1><span class="editable-target">対応WEBブラウザ</span></h1>
+            <p class="align-c editable-target">
               Google Chrome<br>
               Firefox<br>
               Internet Explorer 10, 11<br>
@@ -131,7 +131,7 @@
         </div>
       </section>
       <footer>
-        <p><small>© 2015 DSKTSCHY</small></p>
+        <p><small class="editable-target">© 2015 DSKTSCHY</small></p>
       </footer>
     </div>
   </body>
