--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="robots" content="noindex,nofollow,noarchive">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/bundle.min.css">
+    <meta content="noindex,nofollow,noarchive" name="robots">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/bundle.min.css" rel="stylesheet" type="text/css">
     <link href="favicon.ico" rel="icon" sizes="16x16 32x32 48x48" type="image/vnd.microsoft.icon">
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/portal.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
+    <script src="javascripts/portal.min.js" type="text/javascript"></script>
     <title>Editable</title>
   </head>
   <body>
-    <div id="portal" class="portal">
+    <div class="portal" id="portal">
       <header>
         <h1>
-          <img src="/images/logo.png" alt="editable.js">
+          <img alt="editable.js" src="/images/logo.png">
         </h1>
       </header>
       <section>
-        <a id="portal-bookmarklet-link" class="portal-bookmarklet-link">
+        <a class="portal-bookmarklet-link" id="portal-bookmarklet-link">
           <div class="outer-wrapper">
             <div class="inner-wrapper">
               <section>
@@ -36,7 +36,7 @@
         </a>
       </section>
       <section>
-        <div id="portal-demo" class="portal-demo">
+        <div class="portal-demo" id="portal-demo">
           <section class="editable-group">
             <h1><span class="editable-target">あなたのページを編集可能にします</span></h1>
             <p class="editable-target">
