--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
               編集対象のページをWEBブラウザで開き、登録したブックマークをクリックすると、設定箇所の編集が可能となります。<br>
               <br>
               編集完了後、ページ右上の Download をクリックすると、編集済みのHTMLファイルをダウンロードすることができます。<br>
-              ダウンロードしたHTMLファイルをサーバーへアップロードすると、編集した内容を反映、公開することができます。<br>
-              <br>
-              さらに詳しい使い方、設定についてはこちらをご覧ください。
+              ダウンロードしたHTMLファイルをサーバーへアップロードすると、編集した内容を反映、公開することができます。<!-- <br> -->
+              <!-- <br> -->
+              <!-- さらに詳しい使い方、設定についてはこちらをご覧ください。 -->
             </p>
           </section>
           <section class="editable-group">
@@ -112,9 +112,9 @@
             <p class="editable-target">
               editable.jsは、あくまで静的HTMLを対象としたツールです。<br>
               シングル・ページ・アプリケーションのような、動的に挿入される要素が存在するHTMLには、完全対応しているとは言えません。<br>
-              editable-config.json の設定により、挿入された要素をダウンロード時に削除することも可能ですが、余分な空白が残る場合があります。<br>
-              <br>
-              その他の注意事項についてはこちらをご覧ください。
+              editable-config.json の設定により、挿入された要素をダウンロード時に削除することも可能ですが、余分な空白が残る場合があります。<!-- <br> -->
+              <!-- <br> -->
+              <!-- その他の注意事項についてはこちらをご覧ください。 -->
             </p>
           </section>
           <section class="editable-group">
@@ -123,9 +123,9 @@
               Google Chrome<br>
               Firefox<br>
               Internet Explorer 10, 11<br>
-              Microsoft Edge ※<br>
-              <br>
-              ※ Microsoft Edge でご使用になる場合はこちらをお読みください。
+              Microsoft Edge<!--  ※<br> -->
+              <!-- <br> -->
+              <!-- ※ Microsoft Edge でご使用になる場合はこちらをお読みください。 -->
             </p>
           </section>
         </div>
