--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div class="portal" id="portal">
       <header>
         <h1>
-          <img alt="editable.js" src="/images/logo.png">
+          <img alt="editable.js" src="images/logo.png">
         </h1>
       </header>
       <section>
