--- a/public/index.html
+++ b/public/index.html
@@ -118,8 +118,9 @@
             <p class="align-c" data-editable="target">
               Google Chrome<br>
               Firefox<br>
-              Internet Explorer 10, 11<br>
-              Microsoft Edge<!--  ※<br> -->
+              Opera<br>
+              Microsoft Edge<!--  ※ --><br>
+              Internet Explorer 10, 11<!-- <br> -->
               <!-- <br> -->
               <!-- ※ Microsoft Edge でご使用になる場合はこちらをお読みください。 -->
             </p>
