--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>editable v2.0.0</title>
 </head>
-<body></body>
+<body>
+  <header>
+    <h1>editable v2.0.0</h1>
+  </header>
+  <section>
+    <h2>This block is not editable</h2>
+    <p data-editable="target">This block is editable</p>
+  </section>
+</body>
 </html>
