Make unit clone and remove

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>editable v2.0.0</h1>
   </header>
-  <section>
+  <section data-editable="unit">
     <h2>This block is not editable</h2>
     <p data-editable="target">This block is editable</p>
   </section>
