Don't use window and window.document in classes

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </header>
   <section data-editable="unit">
     <h2>This block is not editable</h2>
-    <p data-editable="target">This block is editable</p>
+    <div data-editable="target">This block is editable</div>
   </section>
 </body>
 </html>
