Make only text containable elements editable

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
   </header>
   <section data-editable="unit">
     <h2>This block is not editable</h2>
-    <div data-editable="target">This block is editable</div>
+    <div data-editable="target">
+      <p>This block is editable.</p>
+    </div>
+    <img data-editable="target">
   </section>
 </body>
 </html>
