Only for p containable elements, enable to insert line break without shift key

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
     <div data-editable="target">
       <p>This block is editable.</p>
     </div>
+    <p data-editable="target">
+      This block is editable.<br>
+      This block can't contain p.
+    </p>
     <img data-editable="target">
   </section>
 </body>
